# esp32-universal-control

./: .gitignore  Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
firmware/: Cargo.toml  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/src/: ble_hid.rs  hid_descriptor.rs  main.rs  ptp.rs  session.rs
host/: Cargo.toml
host/src/: debug.rs  main.rs  serial.rs  slots.rs
host/src/capture/: cursor.rs  keyboard.rs  keymap.rs  mod.rs  outbox.rs  trackpad.rs
protocol/: Cargo.toml
protocol/src/: hid_descriptor.rs  input.rs  keyboard.rs  lib.rs  ptp.rs  wire.rs
src/: ble_hid.rs  esp_hid_ffi.rs  feature_reports.rs  hid_descriptor.rs  main.rs
