[package]
name = "esp32-uc-host"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
core-foundation = "0.10.1"
core-graphics = "0.25.0"
env_logger = "0.11.10"
esp32-uc-protocol = { path = "../protocol" }
libloading = "0.9.0"
log = "0.4.29"
postcard = "1.1.3"
serialport5 = "5.0.2"
zerocopy = { version = "0.8.48", features = ["derive"] }
